# invitor

./: .gitignore  functions.py  image_generator.py  main.py  participants.csv  person.py  pyproject.toml
